--- a/package.json
+++ b/package.json
@@ -31,11 +31,15 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@google-cloud/firestore": "^7.1.0",
+    "@google/genai": "^0.2.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
+    "ethers": "^6.13.2",
     "firebase": "^11.9.1",
+    "framer-motion": "^11.11.17",
     "geist": "^1.3.1",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
@@ -46,7 +50,9 @@
     "react-dom": "^18.3.1",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "wagmi": "^2.12.29",
+    "viem": "^2.21.45"
   },
   "devDependencies": {
     "@types/node": "^20",
