feat: Complete production-ready deployment setup
- Add BBFT smart contract with BSC compatibility
- Integrate contract with frontend using dynamic config
- Fix and harden MetaMask wallet integration
- Remove AI Strategy section completely
- Add custom slippage tolerance input to Swap Tokens
- Verify Firebase backend and Studio configuration
- Add comprehensive CI/CD with GitHub Actions
- Update documentation with deployment guide

Changes:
- contracts/BBFT.sol: Deployable BEP-20 token contract
- src/lib/contractService.ts: Contract integration service
- src/lib/swapService.ts: Enhanced swap service with slippage
- src/hooks/useWeb3.ts: Improved MetaMask integration
- src/app/(app)/trade/page.tsx: Enhanced trading UI with slippage controls
- firebase.json, firestore.rules: Firebase configuration
- .github/workflows/: CI/CD workflows
- DEPLOYMENT_GUIDE.md: Comprehensive deployment instructions

--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "compile": "hardhat compile",
+    "test": "hardhat test",
+    "deploy:testnet": "hardhat run scripts/deploy.ts --network bscTestnet",
+    "deploy:mainnet": "hardhat run scripts/deploy.ts --network bsc"
   },
   "dependencies": {
     "@google-cloud/firestore": "^7.1.0",
@@ -56,11 +60,14 @@
     "wagmi": "^2.12.29"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^3.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "hardhat": "^2.19.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
