feat: Update contract from BBFT to EVANA
- Replace BBFT.sol with EVANA.sol contract
- Update all references from BBFT to EVANA
- Update constructor to use only treasury and dev wallet parameters
- Update deployment scripts and tests
- Update environment variables and configuration
- Update documentation and deployment guides
- Update GitHub Actions workflows

The EVANA contract is a more robust implementation with:
- ReentrancyGuard for security
- Improved error handling
- Better fee management
- Enhanced trading controls

--- a/.github/workflows/deploy-contract.yml
+++ b/.github/workflows/deploy-contract.yml
@@ -1,4 +1,4 @@
-name: Deploy BBFT Contract
+name: Deploy EVANA Contract
 
 on:
   workflow_dispatch:
@@ -67,7 +67,7 @@ jobs:
         echo "   - Compiler Type: Solidity (Single file)"
         echo "   - Compiler Version: 0.8.20"
         echo "   - License: MIT"
-        echo "5. Copy the contract source code from contracts/BBFT.sol"
+        echo "5. Copy the contract source code from contracts/EVANA.sol"
         echo "6. Add constructor parameters if needed"
         
     - name: Update Firebase config
