--- a/env.example
+++ b/env.example
@@ -14,10 +14,10 @@ NEXT_PUBLIC_PANCAKESWAP_ROUTER=0x10ED43C718714eb63d5aA57B78B54704E256024E
 NEXT_PUBLIC_PANCAKESWAP_TESTNET_ROUTER=0xD99D1c33F9fC3444f8101754aBC46c52416550D1
 NEXT_PUBLIC_WBNB_ADDRESS=0xbb4CdB9CBd36B01bD1cBaEBF2De08d9173bc095c
 
-# BBFT Contract Configuration
-NEXT_PUBLIC_BBFT_CONTRACT_ADDRESS=
-NEXT_PUBLIC_BBFT_TREASURY_ADDRESS=
-NEXT_PUBLIC_BBFT_DEV_WALLET=
+# EVANA Contract Configuration
+NEXT_PUBLIC_EVANA_CONTRACT_ADDRESS=
+NEXT_PUBLIC_EVANA_TREASURY_ADDRESS=
+NEXT_PUBLIC_EVANA_DEV_WALLET=
 
 # AI Configuration
 NEXT_PUBLIC_GEMINI_API_KEY=your_gemini_api_key
